--- a/src/12.md
+++ b/src/12.md
@@ -1,4 +1,4 @@
-Chapter: Cultivating Resilience: Practicing Self-Compassion
+Cultivating Resilience: Practicing Self-Compassion
 ===========================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of resilience in overcoming obstacles and achieving long-term goals. In this chapter, we will explore the practice of self-compassion as a technique for cultivating resilience.
