--- a/src/14.md
+++ b/src/14.md
@@ -1,4 +1,4 @@
-Chapter: Strategies for Perseverance: Setting Goals
+Strategies for Perseverance: Setting Goals
 ===================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of perseverance in achieving long-term goals. In this chapter, we will explore the strategy of setting goals as a technique for developing perseverance.
