--- a/src/20.md
+++ b/src/20.md
@@ -1,4 +1,4 @@
-Chapter: Harnessing Failure as a Tool for Growth: Learning from Mistakes
+Harnessing Failure as a Tool for Growth: Learning from Mistakes
 ========================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. One aspect of growth mindset is learning from mistakes and failures.
