--- a/src/23.md
+++ b/src/23.md
@@ -1,4 +1,4 @@
-Chapter: Balancing Perseverance with Self-Care
+Balancing Perseverance with Self-Care
 ==============================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life," we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. However, it's essential to balance perseverance with self-care.
