--- a/src/26.md
+++ b/src/26.md
@@ -1,4 +1,4 @@
-Chapter: Balancing Perseverance with Self-Care: Overcoming Common Obstacles to Self-Care
+Balancing Perseverance with Self-Care: Overcoming Common Obstacles to Self-Care
 ========================================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life," we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. However, balancing perseverance with self-care can be challenging due to common obstacles that individuals face. In this chapter, we will discuss how to overcome these obstacles and prioritize self-care.
