--- a/src/27.md
+++ b/src/27.md
@@ -1,4 +1,4 @@
-Chapter: Applying Grit and Growth Mindset Across Domains
+Applying Grit and Growth Mindset Across Domains
 ========================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life," we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. However, grit and growth mindset are not limited to any one domain of life. In this chapter, we will discuss how to apply grit and growth mindset across domains.
