--- a/src/28.md
+++ b/src/28.md
@@ -1,4 +1,4 @@
-Chapter: Applying Grit and Growth Mindset Across Domains: Career Development
+Applying Grit and Growth Mindset Across Domains: Career Development
 ============================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of grit and growth mindset in achieving success across multiple domains of life. In this chapter, we will explore how these concepts can be applied to the domain of career development.
