--- a/src/3.md
+++ b/src/3.md
@@ -1,4 +1,4 @@
-Chapter: Introduction: Overview of Topics Covered in the Book
+Introduction: Overview of Topics Covered in the Book
 =============================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", we explore the importance of developing grit and growth mindset in achieving long-term success. The book covers various topics related to grit and growth mindset, including:
