--- a/src/30.md
+++ b/src/30.md
@@ -1,4 +1,4 @@
-Chapter: Applying Grit and Growth Mindset Across Domains: Relationships
+Applying Grit and Growth Mindset Across Domains: Relationships
 =======================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life," we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. However, these concepts can also be applied to various domains of life, including relationships. In this chapter, we will discuss how to apply grit and growth mindset to relationships.
