--- a/src/31.md
+++ b/src/31.md
@@ -1,4 +1,4 @@
-Chapter: Applying Grit and Growth Mindset Across Domains: Social Impact
+Applying Grit and Growth Mindset Across Domains: Social Impact
 =======================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life," we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. When it comes to social impact, grit and growth mindset are essential in achieving meaningful and lasting change. In this chapter, we will discuss how to apply grit and growth mindset to create social impact.
