--- a/src/33.md
+++ b/src/33.md
@@ -1,4 +1,4 @@
-Chapter: Overcoming Obstacles to Grit and Growth Mindset: Managing Stress and Anxiety
+Overcoming Obstacles to Grit and Growth Mindset: Managing Stress and Anxiety
 =====================================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life," we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. However, stress and anxiety can be obstacles that impede progress towards these goals. In this chapter, we will discuss strategies to manage stress and anxiety and maintain grit and growth mindset.
