--- a/src/35.md
+++ b/src/35.md
@@ -1,4 +1,4 @@
-Chapter: Overcoming Obstacles to Grit and Growth Mindset: Dealing with Criticism and Rejection
+Overcoming Obstacles to Grit and Growth Mindset: Dealing with Criticism and Rejection
 ==============================================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life," we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. However, there are obstacles that can impede progress towards these goals, such as criticism and rejection.
