--- a/src/36.md
+++ b/src/36.md
@@ -1,4 +1,4 @@
-Chapter: Overcoming Obstacles to Grit and Growth Mindset: Overcoming Fear and Doubt
+Overcoming Obstacles to Grit and Growth Mindset: Overcoming Fear and Doubt
 ===================================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life," we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. However, fear and doubt can be obstacles that impede progress towards these goals.
