--- a/src/37.md
+++ b/src/37.md
@@ -1,4 +1,4 @@
-Chapter: Sustaining Grit and Growth Mindset
+Sustaining Grit and Growth Mindset
 ===========================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life," we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. However, sustaining grit and growth mindset is an ongoing process that requires consistent effort and attention.
