--- a/src/38.md
+++ b/src/38.md
@@ -1,4 +1,4 @@
-Chapter: Sustaining Grit and Growth Mindset: Strategies for Maintaining Momentum
+Sustaining Grit and Growth Mindset: Strategies for Maintaining Momentum
 ================================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of sustaining grit and growth mindset in achieving long-term success. In this chapter, we will explore strategies for maintaining momentum towards these goals.
