--- a/src/39.md
+++ b/src/39.md
@@ -1,4 +1,4 @@
-Chapter: Sustaining Grit and Growth Mindset: Preparing for Future Challenges
+Sustaining Grit and Growth Mindset: Preparing for Future Challenges
 ============================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of sustaining grit and growth mindset in achieving long-term success. In this chapter, we will explore techniques for preparing for future challenges and maintaining resilience.
