--- a/src/41.md
+++ b/src/41.md
@@ -1,4 +1,4 @@
-Chapter: Sustaining Grit and Growth Mindset: Achieving Long-Term Success
+Sustaining Grit and Growth Mindset: Achieving Long-Term Success
 ========================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of sustaining grit and growth mindset in achieving long-term success. In this chapter, we will explore how to achieve long-term success by developing and maintaining grit and growth mindset.
