--- a/src/6.md
+++ b/src/6.md
@@ -1,4 +1,4 @@
-Chapter: Understanding Grit and Growth Mindset: What is Growth Mindset?
+Understanding Grit and Growth Mindset: What is Growth Mindset?
 =======================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of grit and growth mindset in achieving long-term success. In this chapter, we will explore what growth mindset is and how it relates to grit.
