--- a/src/8.md
+++ b/src/8.md
@@ -1,4 +1,4 @@
-Chapter: Cultivating Resilience
+Cultivating Resilience
 ===============================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of resilience in achieving long-term success. In this chapter, we will explore techniques for cultivating resilience.
