--- a/src/1.md
+++ b/src/1.md
@@ -1,4 +1,4 @@
-Chapter: Introduction
+Introduction
 =====================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life," we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life.
