--- a/src/10.md
+++ b/src/10.md
@@ -1,4 +1,4 @@
-Chapter: Cultivating Resilience: Overcoming Self-Doubt
+Cultivating Resilience: Overcoming Self-Doubt
 ======================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of resilience in achieving long-term goals. In this chapter, we will explore techniques for cultivating resilience by overcoming self-doubt.
