--- a/src/16.md
+++ b/src/16.md
@@ -1,4 +1,4 @@
-Chapter: Strategies for Perseverance: Building Support Systems
+Strategies for Perseverance: Building Support Systems
 ==============================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of perseverance in achieving long-term goals. In this chapter, we will explore the strategy of building support systems as a technique for developing perseverance.
