--- a/src/18.md
+++ b/src/18.md
@@ -1,4 +1,4 @@
-Chapter: Harnessing Failure as a Tool for Growth
+Harnessing Failure as a Tool for Growth
 ================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life," we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. However, failure is an inevitable part of the journey towards achieving goals. In this chapter, we will discuss how to harness failure as a tool for growth.
