--- a/src/32.md
+++ b/src/32.md
@@ -1,4 +1,4 @@
-Chapter: Overcoming Obstacles to Grit and Growth Mindset
+Overcoming Obstacles to Grit and Growth Mindset
 ========================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life," we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. However, obstacles such as stress, burnout, criticism, rejection, fear, and doubt can impede progress towards these goals. In this chapter, we will discuss strategies to overcome these obstacles and maintain grit and growth mindset.
