--- a/src/34.md
+++ b/src/34.md
@@ -1,4 +1,4 @@
-Chapter: Overcoming Obstacles to Grit and Growth Mindset: Coping with Burnout
+Overcoming Obstacles to Grit and Growth Mindset: Coping with Burnout
 =============================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", we explore the importance of developing grit and growth mindset in achieving long-term success and fulfillment in life. However, there are obstacles that can impede progress towards these goals, such as burnout.
