--- a/src/4.md
+++ b/src/4.md
@@ -1,4 +1,4 @@
-Chapter: Understanding Grit and Growth Mindset
+Understanding Grit and Growth Mindset
 ==============================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of grit and growth mindset in achieving long-term success. In this chapter, we will explore what grit and growth mindset are and the benefits of developing them.
