--- a/src/40.md
+++ b/src/40.md
@@ -1,4 +1,4 @@
-Chapter: Sustaining Grit and Growth Mindset: Staying Motivated and Inspired
+Sustaining Grit and Growth Mindset: Staying Motivated and Inspired
 ===========================================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of sustaining grit and growth mindset in achieving long-term success. In this chapter, we will explore techniques for staying motivated and inspired while developing grit and growth mindset.
