--- a/src/5.md
+++ b/src/5.md
@@ -1,4 +1,4 @@
-Chapter: Understanding Grit and Growth Mindset: What is Grit?
+Understanding Grit and Growth Mindset: What is Grit?
 =============================================================
 
 In "Grit and Growth: How to Develop Resilience and Perseverance for a Fulfilling Life", the author emphasizes the importance of grit and growth mindset in achieving long-term success. In this chapter, we will explore what grit is and how it relates to growth mindset.
